[metadata]
description-file = README.md

[flake8]
max-line-length = 120
show-source = True
exclude =
    .cache,
    .git,
    .idea,
    .tox,
    .venv,
    .venv-37,
    .venv-install,
    omnibus/_vendor,
extend-ignore =
    E231,
    E265,
    E701,
    E704,
    E711,
    E712,
    E721,
    E731,
    E741,
    E742,
    F821,
    F999,
    W503,
    W504,
statistics = True

[tool:pytest]
addopts = -v --tb=short -n 0

[mypy]
ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true
# plugins = omnibus_mypy.py
